<resources>
    <string name="app_name">WholeSale</string>
    <string name="login_page_home">WholeSale.</string>
    <string name="messages_dashboard">Messages</string>
    <string name="add_product_dashboard">Add Product</string>
    <string name="login_page_sub_header">Sign in to your account</string>
    <string name="login_email_field_hint">Email</string>
    <string name="login_password_field_hint">Password</string>
    <string name="login_don_t_have_an_account">Don\'t have an account?<a style="text-decoration:none" href="">Register</a></string>
    <string name="login_register_btn_text">Register</string>
    <string name="login_forget_btn_text">Forget?</string>
    <string name="first_name_field_hint">First Name</string>
    <string name="last_name_field_hint">Last Name</string>
    <string name="password_field_hint">Password</string>
    <string name="confirm_password_field_hint">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_an_account_text">Create An Account</string>
    <string name="phone_number_field_hint">Phone Number</string>
    <string name="pass_in_range_msg">Password 8–16 length</string>
    <string name="empty_fields_required_msg">Required*</string>
    <string name="diff_pass_msg">Password don\'t match</string>
    <string name="company_name_field_hint">Brand/Company name</string>
    <string name="forget_password_dialog_title">Note</string>
    <string name="forget_password_dialog_msg">Enter your email in the email field to reset your password</string>
    <string name="forget_password_dialog_button">OK</string>
    <string name="email_sent_msg">Link sent to your email</string>
    <string name="email_not_exists_msg">Your email doesn\'t exists</string>
    <string name="add_pro_pro_name_hint">Product Name</string>
    <string name="add_pro_minimum_quantity_hint">Min Quantity</string>
    <string name="add_pro_maximum_quantity_hint">Max Quantity</string>
    <string name="choose_your_prods_colors">Choose your product colors</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="products_type_title">Products Type</string>
    <string name="delete_product_dialog_title">Search</string>
    <string name="delete_product_dialog_msg">Search</string>
    <string name="search_hint">Search</string>
    <string name="add_pro_desc_hint">Description</string>
    <string name="add_pro_add_colors">Add Colors</string>
    <string name="valid_pro_name">Invalid name.</string>
    <string name="valid_pro_desc">Invalid description.</string>
    <string name="valid_pro_quan">Put at least 10 items.</string>
    <string name="valid_pro_max">Max price invalid.</string>
    <string name="valid_pro_min">Min price invalid.</string>
    <string name="add_pro_quantity_hint">Quantity</string>
    <string name="show_more_prods">Show All</string>
    <string name="already_have_an_account_sign_in">Already have an account?<a style="text-decoration:none" href="">Sign in</a></string>
    <string name="signup_user_type_seller">Seller</string>
    <string name="signup_user_type_buyer">Buyer</string>
    <string name="signin_as_seller">sign in as seller</string>
    <string name="signin_as_buyer">sign in as buyer</string>
    <string-array name="colors">
        <item name="red">Red</item>
        <item name="green">Green</item>
        <item name="black">Black</item>
        <item name="white">White</item>
        <item name="blue">Blue</item>
        <item name="grey">Grey</item>
        <item name="pink">Pink</item>
        <item name="purple">Purple</item>
        <item name="brown">Brown</item>
        <item name="yellow">Yellow</item>
        <item name="orange">Orange</item>
    </string-array>
    <string-array name="colors_in_hex">
        <item name="red">#FB1C0D</item>
        <item name="green">#3FFF33</item>
        <item name="black">#000000</item>
        <item name="white">#FFFFFF</item>
        <item name="blue">#0000FF</item>
        <item name="grey">#A59F9E</item>
        <item name="pink">#F711E9</item>
        <item name="purple">#AD11F7</item>
        <item name="brown">#591E05</item>
        <item name="yellow">#FFFF00</item>
        <item name="orange">#FF5733</item>
    </string-array>
    <string-array name="products_types">
        <item name="clothing">Clothing</item>
        <item name="baby">Baby</item>
        <item name="food">Food</item>
        <item name="automotive_parts">Automotive Parts</item>
    </string-array>
    <string-array name="products_quantity">
        <item name="weights">KG/G</item>
        <item name="pieces">Pieces</item>
        <item name="package">Packages</item>
        <item name="box">Boxes</item>
    </string-array>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="town_field_hint">Town</string>
    <string name="street_field_hint">Street Number</string>
    <string name="next_btn_text">next</string>
    <string-array name="governances">
        <item name="amman">Amman</item>
        <item name="mafraq">Mafraq</item>
        <item name="zarqa">Az\'Zarqa</item>
        <item name="karak">Karak</item>
        <item name="sult">Sult</item>
        <item name="maan">Ma\'an</item>
        <item name="azraq">Azraq</item>
        <item name="irbid">Irbid</item>
        <item name="madaba">Madaba</item>
        <item name="ramtha">Ramtha</item>
        <item name="aqaba">Aqaba</item>
        <item name="jarash">Jarash</item>
        <item name="balqa">Balqa</item>
        <item name="ajloon">Ajloon</item>
        <item name="tafeela">Tafeela</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="regisetering_user_dialog">Register user</string>
    <string name="registering_user_msg_dialog">Registering</string>
    <string name="build_field_hint">Building number</string>
    <string name="apartment_field_hint">Apartment number</string>
    <string name="floor_field_hint">Field number</string>
    <string name="pobox_field_hint">P.O Box</string>
    <string name="zip_field_hint">Zip Code</string>
    <string name="creditinfo_field_hint">Credit Info</string>
    <string name="title_activity_seller_main">SellerMainActivity</string>
    <string name="title_home">Home</string>
    <string name="profile_dashboard">Profile</string>
    <string name="msgs_page_notsigned_in">You\'r not signed in, sign in first.</string>
    <string name="msgs_page_no_contacts">You never chat with any suppliers yet</string>
    <string name="sign_in_text">sign in</string>
    <string name="wish_list_dashboard">WishList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_in_first_msg">Sign in First.</string>
    <string name="delete_acc_dialog_title">Delete Account</string>
    <string name="delete_acc_dialog_msg">Are you sure with deleteing your account?, all your data will be gone forever</string>
    <string name="signout_acc_dialog_title">Sign Out</string>
    <string name="signout_acc_dialog_msg">Are you sure do you want to sign out?</string>
    <string name="share_msg_body">Hey there i\'m using WholeSale.</string>
    <string name="share_subject">I\'m Using WholeSale</string>
    <string name="buyer_changes_submit_text">Submit</string>
    <string name="sign_in_user_title_dialog">Sign In</string>
    <string name="sign_in_user_msg_dialog">Signing In…</string>
    <string name="sign_up_user_msg_dialog">Signing Up…</string>
    <string name="update_user_data_title_dialog">Update User</string>
    <string name="update_user_data_msg_dialog">Updating your requested data…</string>
    <string name="no_avaliable_wished_products">No wished products add yet.</string>
    <string name="delete_all_wished_dialog_title">Delete All Wished Products</string>
    <string name="delete_all_wished_dialog_msg">Are you sure you won\'t to delete all wished products?</string>
    <string name="toast_delete_wished_msg_success">All Wished Products Deleted.</string>
    <string name="toast_delete_wished_msg_failed">Wished Products Failed To Delete.</string>
    <string name="product_details_contact_supplier_btn">Chat</string>
    <string name="product_details_review_product_btn">Review</string>
    <string name="product_details_review_product">Review Product</string>
    <string name="product_details_buy_product_btn">Buy now</string>
    <string name="write_review_here_hint">Write Review here</string>
    <string name="review_text_btn">Review</string>
    <string name="write_review_helper_text">*Optional</string>
    <string name="this_product_never_reviewed_yet">This Product never reviewed yet.</string>
    <string name="buy_all_now">buy now</string>
    <string name="wishlist_title">WishList</string>
    <string name="messages_title">Messages</string>
    <string name="shopping_cart_title">Shopping Cart</string>
    <string name="share_title">Share</string>
    <string name="visit_our_website_title">Visit Our Website</string>
    <string name="profile_actions_header">Profile Actions</string>
    <string name="update_your_data_title">Update your data</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="communicate_header">Communicate</string>
    <string name="no_products_available_search_msg">No Products Available.</string>
    <string name="add_pro_price_range_hint">Range Price</string>
    <string name="new_range_btn_text">new range</string>
    <string name="publishing_product_msg">Publishing The Product.</string>
    <string name="publishing_product_title">Publish The Product.</string>
    <string name="update_prod_seller_action">Update</string>
    <string name="delete_prod_seller_action">Delete</string>
    <string name="seller_delete_product_title">Delete Product</string>
    <string name="seller_delete_product_msg">Deleting…</string>
    <string name="seller_update_product_title">Update Product</string>
    <string name="seller_update_product_msg">Updating…</string>
    <string name="submit_data_update_btn_text">Submit Changes</string>
    <string name="profile_pic_cont_desc">profile_pic</string>
    <string name="sign_out_msg">Your app state will be lost,are you sure you want to sign out?</string>
    <string name="add_product_page_title">Add Product</string>
    <string name="messages_page_title">Messages</string>
    <string name="search_page_title">Search</string>
    <string name="refresh_menu_title">Refresh Page</string>
    <string name="connection_state_msg">Connect to internet first.</string>
    <string name="welcome_guest_title">Welcome Guest.</string>
    <string name="sign_in_more_expierence">Sign in To Better Experience.</string>
    <string name="sign_in_for_better_experience_in_wholesale">Sign in For better experience in WholeSale</string>
    <string name="add_to_favorites">Add to favorites.</string>
    <string name="product_imgae_inner_list">product imgae inner list</string>
    <string name="write_a_message_hint">Write a Message</string>
    <string name="contact_title">Contacts</string>
    <string-array name="products_type_titles">
        <item name="AutomotiveParts">AutomotiveParts</item>
        <item name="Clothing">Clothing</item>
        <item name="Baby">Baby</item>
        <item name="Food">Food</item>
        <item name="AllCategories">All Categories</item>
    </string-array>
</resources>