<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Dialog.Style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/first_name_field_hint"
        android:visibility="visible"
        app:boxStrokeColor="#ffffff"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/last_name_layout"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/last_name_field_hint"
        android:textColorHint="#ffffff"
        app:boxStrokeColor="#ffffff"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/first_name_layout"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/last_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:maxLines="1"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_number_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_number_field_hint"
        android:textColorHint="#ffffff"
        android:visibility="gone"
        app:boxStrokeColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phone_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:inputType="phone"
            android:maxLength="16"
            android:maxLines="1"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/login_email_field_hint"
        android:textColorHint="#ffffff"
        android:visibility="gone"
        app:boxStrokeColor="#ffffff"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_field_hint"
        android:textColorHint="#ffffff"
        app:boxStrokeColor="#ffffff"
        app:counterMaxLength="16"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pass_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/con_pass_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_password_field_hint"
        android:textColorHint="#ffffff"
        android:visibility="visible"
        app:boxStrokeColor="#ffffff"
        app:counterMaxLength="16"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/pass_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/con_pass_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/submit_btn"
        style="@style/TextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/buyer_changes_submit_text"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/cancel_btn"
        app:layout_constraintTop_toBottomOf="@+id/con_pass_layout" />

    <android.support.design.button.MaterialButton
        android:id="@+id/cancel_btn"
        style="@style/TextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/cancel_button"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/submit_btn"
        app:layout_constraintEnd_toStartOf="@+id/submit_btn"
        app:layout_constraintStart_toEndOf="@+id/guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <android.support.constraint.Group
        android:id="@+id/update_name_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="first_name_layout, last_name_layout" />

    <android.support.constraint.Group
        android:id="@+id/update_password_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="pass_layout, con_pass_layout" />


</android.support.constraint.ConstraintLayout>